# lab6-solutions

./: .gitignore  CMakeLists.txt  README.md
.github/classroom/: autograding.json
src/: Line.cpp  Line.hpp  Point.cpp  Point.hpp  Triangle.cpp  Triangle.hpp  main.cpp
tests/: CMakeLists.txt  test_line.cpp  test_point.cpp  test_triangle.cpp
